<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/settings"
            android:scaleType="centerInside"
            android:src="@drawable/button_settings"
            style="?android:attr/buttonBarButtonStyle"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/photo"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps = "false"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/pro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@drawable/color_button_1"
            android:text="@string/pro"
            app:backgroundTintMode="screen"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_camera"
            app:iconGravity="top"
            app:iconPadding="-3dp"
            app:iconSize="30dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_gallery"
            app:iconGravity="top"
            app:iconPadding="-3dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/demo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/demo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_demo"
            app:iconGravity="top"
            app:iconPadding="-3dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/celebrities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/celebrities"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_star"
            app:iconGravity="top"
            app:iconPadding="-3dp"
            app:iconSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/photo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/photo_button"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_picture"
            app:iconGravity="top"
            app:iconPadding="-5dp"
            app:iconSize="30dp"
            app:iconTintMode="src_in" />

        <Button
            android:id="@+id/video"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_button_1"
            android:text="@string/video"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:backgroundTintMode="screen"
            app:icon="@drawable/button_video"
            app:iconGravity="top"
            app:iconPadding="-5dp"
            app:iconSize="30dp" />

    </LinearLayout>

</LinearLayout>